# setup.nix

./: .gitignore  .travis.yml  CHANGELOG.rst  README.rst  default.nix  overrides.nix
docker/: default.nix
example/: Makefile  Makefile.nix  helloworld.py  requirements.nix  requirements.txt  setup.cfg  setup.nix  setup.py
example-env/: Makefile  Makefile.nix  requirements.nix  setup.nix
example-package/: requirements.txt  setup.nix
examples/django/: Makefile  gunicorn.nix  requirements.nix  setup-pinned.nix  setup.cfg  setup.nix  setup.py
examples/django/src/django_project/: manage.py  settings.py
examples/env/: requirements.nix  requirements.txt  setup.nix
examples/jupyter/: shell.nix
examples/jupyter/kernel/: Makefile  requirements.nix  requirements.txt  setup.nix
examples/overrides/: requirements.nix  setup.nix
examples/package/: Makefile  helloworld.py  requirements.nix  requirements.txt  setup.nix  tests.nix
examples/package/tests/: test_helloworld.py
examples/plone/: Makefile  buildout-plone52.cfg  requirements-buildout.nix  requirements-buildout.txt  requirements-extras.txt  requirements-plone52-python3.nix  requirements-plone52-python3.txt  run.py  setup.nix  zope.conf
examples/plone/zconfig/: generators.nix  instance.nix  instancehome.nix  zeo.nix  zeoinstance.nix
examples/tool/: Makefile  requirements.nix  requirements.txt  setup.nix
tests/overrides/: Makefile
tests/package/: Makefile  setup.nix
