[metadata]
name = helloworld
version = 1.0
description = Prints "Hello World!"
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/datakurre/setup.nix/
license = GPL version 2

[options]
setup_requires =
    pytest-runner
install_requires =
tests_require =
    pytest
py_modules =
    helloworld

[options.entry_points]
console_scripts =
    hello-world = helloworld:main

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__
max-complexity = 10

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
