[metadata]
name = django_project
version = 1.0
description = Example Django-project
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/datakurre/setup.nix/
license = GPL version 2

[options]
install_requires =
    django
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    manage = django_project.manage:main

[bdist_wheel]
universal = 1
